--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <link rel="stylesheet" href="styles.css">
     </head>
     <body>
-        <p>HELLO EVERYONE!!</p>
+        <h1>HELLO EVERYONE!!</h1>
+        <h6>How are you?</h6>
     </body>
 </html>
